Текстовый редакор работает

--- a/DZ_6/CMakeLists.txt
+++ b/DZ_6/CMakeLists.txt
@@ -5,5 +5,5 @@ project(DZ_6 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(DZ_6 main.cpp)
+add_executable(DZ_6 main.cpp function.h function.cpp)
 
