--- a/DZ_7/CMakeLists.txt
+++ b/DZ_7/CMakeLists.txt
@@ -1,9 +1,21 @@
-cmake_minimum_required(VERSION 3.25)
+cmake_minimum_required(VERSION 3.10.0)
 
-project(DZ_7 LANGUAGES CXX)
+project(helloworld)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(DZ_7 main.cpp regulator.h regulator.cpp)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+set(CMAKE_AUTOUIC ON)
 
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+find_package(Qt5 COMPONENTS Widgets REQUIRED)
+
+add_executable(helloworld
+   mainwindow.ui
+   mainwindow.cpp
+   main.cpp)
+
+target_link_libraries(helloworld Qt5::Widgets)
