--- a/DZ_7/CMakeLists.txt
+++ b/DZ_7/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10.0)
 
-project(helloworld)
+project(DZ_7)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -13,9 +13,11 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
-add_executable(helloworld
-   mainwindow.ui
-   mainwindow.cpp
-   main.cpp)
+add_executable(DZ_7
+   main.cpp
+   pid.h pid.cpp
+   pwm.h pwm.cpp
+   sensor.h sensor.cpp)
 
-target_link_libraries(helloworld Qt5::Widgets)
+
+target_link_libraries(DZ_7 Qt5::Widgets)
